Fixing Color Contrast

--- a/src/css/LandingPage.module.css
+++ b/src/css/LandingPage.module.css
@@ -19,7 +19,6 @@
   width: 100%;
   height: 100vh;
   font-size: 70px;
-  color: --white;
   box-sizing: border-box;
   padding: 5%;
   justify-content: space-between;
