--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ p {
   font-weight: 300;
   font-style: normal;
   font-size: 24px;
+  color: --white;
 }
 
 h1{
@@ -31,6 +32,7 @@ h1{
   font-weight: 500; 
   font-style: normal;
   font-size: 72px;
+  color: --white;
 }
 
 h2{
@@ -38,7 +40,7 @@ h2{
   font-weight: 500; 
   font-style: normal;
   font-size: 72px;
-
+  color: --white;
 }
 /*@font-face {
   font-family: "MyFont";
